# hotpants

./: .clang-format  .gitignore  .plan.md  ARCHITECTURE_NOTES.md  AUDIT_REPORT.md  BOTTLENECK_ANALYSIS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN_TPS.md  Doxyfile  MIGRATION.md  Makefile  NOTES.md  PHASE3_STATUS.md  PYTHON_API_STATUS.md  README.md  TESTING_TPS.md  alard.c  analyze_single_region.py  benchmark_suite.py  extractkern.c  functions.c  functions.h  globals.h  main.c  profile_hotpants.py  pyproject.toml
.github/workflows/: benchmark.yml  build.yml  ci.yml  docs.yml
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  hotpants  maskim
dev/profiling/: analyze_bottlenecks.py  profile_gprof.py
docs/: .gitignore  Makefile  README.md  conf.py  index.rst
docs/api/: c_api.rst  python_api.rst
docs/guides/: algorithm.rst  installation.rst  psf_matching.rst  quickstart.rst  tuning.rst
src/: alard.c  allocate.c  allocate.h  basis.c  basis.h  basis_delta.c  basis_gaussian.c  decorrelation.c  decorrelation.h  defaults.h  functions.c  functions.h  globals.c  globals.h  hotpants_api.h  hotpants_config.h  hotpants_context.c  hotpants_context.h  hotpants_wrapper.c  main.c  maskim.c  tps_utils.h  vargs.c
src/hotpants/: __init__.py  _core.py  _hotpants_ffi.py  api.py
tests/: conftest.py  test_api.py  test_api_integration.py  test_decorrelation.py  test_delta_basis_integration.py  test_diagnostic_psf.py  test_regression.py  test_tps.py
