# ===================================================================
# Build System Configuration
# ===================================================================
# The C library (libhotpants) must be built separately via CMake
# before installing the Python package:
#
#   cmake -B build -DCMAKE_BUILD_TYPE=Release
#   cmake --build build
#   export LD_LIBRARY_PATH=$PWD/build:$LD_LIBRARY_PATH
#   pip install -e .
#
# See CONTRIBUTING.md for full development setup instructions.
# ===================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hotpants"
version = "0.0.1"
description = "High Order Transform of PSF ANd Template Subtraction"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=1.26",
    "pydantic>=2.0",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tkillestein/hotpants"

[dependency-groups]
test = [
    "pytest>=8.0",
    "numpy>=1.26",
    "astropy>=6.0",
    "scipy>=1.13",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "breathe>=4.35",
]
dev = [
    "pytest>=8.0",
    "numpy>=1.26",
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "astropy>=6.0",
    "scipy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hotpants"]

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
extend-exclude = ["tests", "docs"]
line-length = 100

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = ["D", "COM812", "FBT", "PLR0913", "FIX", "TD"]


[tool.ty.src]
exclude = ["tests"]
